--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@angular/compiler": "~8.2.12",
     "@angular/core": "~8.2.12",
     "@angular/forms": "~8.2.12",
+    "@angular/http": "^7.2.15",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.12",
     "@angular/platform-browser-dynamic": "~8.2.12",
     "@angular/router": "~8.2.12",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
+    "rxjs-observable": "0.0.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
